Using UI_BUT_REDALERT flag for UI_BTYPE_KEY_EVENT buttons crashes Blender #52208

Closed
opened 2017-07-28 00:08:10 +02:00 by Aleksandr Zinovev · 4 comments

System Information
Ubuntu 16.04
GeForce 940MX

Blender Version
Broken: 2.78, 2.79
Worked: ???

Short description of error
Using UI_BUT_REDALERT flag for UI_BTYPE_KEY_EVENT buttons crashes Blender.

Exact steps for others to reproduce the error
Run this script in text editor and open side panel:

import bpy

class TestPanel(bpy.types.Panel):
    bl_label = "Test Panel"
    bl_space_type = 'TEXT_EDITOR'
    bl_region_type = 'UI'
    
    def draw(self, context):
        layout = self.layout
        col = layout.column(True)
        col.alert = True
        kmi = context.window_manager.keyconfigs.user.keymaps[
            'Transform Modal Map'].keymap_items[0]
        col.prop(kmi, "type", text="", event=True)
        
bpy.utils.register_class(TestPanel)
**System Information** Ubuntu 16.04 GeForce 940MX **Blender Version** Broken: 2.78, 2.79 Worked: ??? **Short description of error** Using `UI_BUT_REDALERT` flag for `UI_BTYPE_KEY_EVENT` buttons crashes Blender. **Exact steps for others to reproduce the error** Run this script in text editor and open side panel: ``` import bpy class TestPanel(bpy.types.Panel): bl_label = "Test Panel" bl_space_type = 'TEXT_EDITOR' bl_region_type = 'UI' def draw(self, context): layout = self.layout col = layout.column(True) col.alert = True kmi = context.window_manager.keyconfigs.user.keymaps[ 'Transform Modal Map'].keymap_items[0] col.prop(kmi, "type", text="", event=True) bpy.utils.register_class(TestPanel) ```
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @AleksandrZinovev-2

Added subscriber: @AleksandrZinovev-2
Bastien Montagne self-assigned this 2017-07-28 10:38:33 +02:00

This issue was referenced by 304e5541cb

This issue was referenced by 304e5541cb6d2874ccca7871d6af295ea073c31a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52208
No description provided.